<resources>
    <string name="app_name">Stroke Helper</string>
    <string name="title_item_detail">Item Detail</string>
	<string name="spinner_promt">Select patient</string>
    <string name="radio_known">Known</string>
    <string name="radio_predoor">PreDoor</string>
    <string name="radio_door">Door</string>
    <string name="radio_postdoor">PostDoor</string>
    <string name="radio_known_onset">Known onset</string>
    <string name="radio_woke_up_symptom">Symptoms (Wake up)</string>
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>
    <string name="radio_unknown">Unknown</string>
    <string name="radio_last_symptom_free_time">Last symptom-free</string>
    <string name="radio_candidate_reason_time_over">Time from the onset of symptoms is \u003E 4,5 hours</string>
    <string name="radio_candidate_reason_time_unknown">Time of the onset of symptoms is unknown</string>
    <string name="radio_candidate_reason_ic_bleeding">Patient has a previous history of IC bleeding or stroke</string>
    <string name="radio_candidate_reason_major_bleeding">Patient has had a major bleeding within 1 month</string>
    <string name="radio_candidate_reason_uncontrol_bleeding">Patient has increased risk for uncontrollable bleeding</string>
    <string name="radio_candidate_reason_hellp">Patient is pregnant with HELLP</string>
    <string name="radio_candidate_reason_terminal_ill">Patient is terminally ill</string>
    <string name="radio_candidate_reason_not_stroke">Patient\'s problem is most likely not caused by stroke</string>
    <string name="radio_candidate_reason_heparin">Within 48 hours treatment dose of heparin, LMWH, dabigatran, apiksaban or rivaroksaban</string>
    <string name="radio_candidate_reason_myocardial">Patient has had a myocartdial infarction within 3 months</string>
    <string name="radio_left">sin</string>
	<string name="radio_right">dx</string>
	<string name="radio_both">l.a.</string>
	<string name="radio_main_suspicion">Main suspicion</string>
	<string name="radio_less_probable">Less probable</string>
	<string name="radio_interrupt_process_1">Patient and/or relatives refused from thrombolysis</string>
	<string name="radio_interrupt_process_2">Deterioration of general condition</string>
	<string name="radio_interrupt_process_3">Patient died</string>
	<string name="radio_interrupt_process_4">Any contraindications found so far</string>
	<string name="radio_interrupt_process_5">Other than stroke</string>
	<string name="radio_interrupt_process_other_1">Seizures</string>
	<string name="radio_interrupt_process_other_2">Migraine</string>
	<string name="radio_interrupt_process_other_3">Hypertensive encephalopathy</string>
	<string name="radio_interrupt_process_other_4">Wernicke\'s encephalopathy</string>
	<string name="radio_interrupt_process_other_5">Drug toxicity</string>
	<string name="radio_interrupt_process_other_6">Psychogenic</string>
	<string name="radio_interrupt_process_other_7">Generalized ischaemia like syncope</string>
    <string name="radio_1a_0">0.Alert</string>
    <string name="radio_1a_1">1.Arousable by minor stimulation</string>
    <string name="radio_1a_2">2.Requires repeated, strong or painful stimulation</string>
    <string name="radio_1a_3">3.Response with reflex or totally unresponsive</string>
     <string name="radio_1b_0">0.Both correctly</string>
    <string name="radio_1b_1">1.One correctly</string>
    <string name="radio_1b_2">2.Neither correctly</string>
    <string name="radio_1c_0">0.Both correctly</string>
    <string name="radio_1c_1">1.One correctly</string>
    <string name="radio_1c_2">2.Neither correctly</string>
    <string name="radio_2_0">0.Normal</string>
    <string name="radio_2_1">1.Partial gaze palsy</string>
    <string name="radio_2_2">2.Forced deviation or total gaze paresis</string>
    <string name="radio_3_0">0.No visual loss</string>
    <string name="radio_3_1">1.Partial hemianopia</string>
    <string name="radio_3_2">2.Complete hemianopia</string>
    <string name="radio_3_3">3.Bilateral hemianopia or blind</string>
    <string name="radio_4_0">0.Normal, symmetrical movements</string>
    <string name="radio_4_1">1.Minor paralysis</string>
    <string name="radio_4_2">2.Partial paralysis</string>
    <string name="radio_4_3">3.Complete paralysis</string>
    <string name="radio_5_0">0.No drift</string>
    <string name="radio_5_1">1.Drift before 10 seconds</string>
    <string name="radio_5_2">2.Some effort against gravity</string>
    <string name="radio_5_3">3.No effort against gravity</string>
    <string name="radio_5_4">4.No movement</string>
    <string name="radio_5_un">UN.Amputation or joint fusion</string>
    <string name="radio_6_1">1.Drift before 5 seconds</string>
    <string name="radio_7_0">0.Absent</string>
    <string name="radio_7_1">1.Present in one limb</string>
    <string name="radio_7_2">2.Present in two limbs</string>
    <string name="radio_8_0">0.Normal, no sensory loss</string>
    <string name="radio_8_1">1.Mild to moderate sensory loss</string>
    <string name="radio_8_2">2.Severe or total sensory loss</string>
    <string name="radio_9_0">0.No aphasia</string>
    <string name="radio_9_1">1.Mild to moderate aphasia</string>
    <string name="radio_9_2">2.Severe aphasia</string>
    <string name="radio_9_3">3.Mute, global aphasia</string>
    <string name="radio_10_0">0.Normal</string>
    <string name="radio_10_1">1.Mild to moderate dysarthria</string>
    <string name="radio_10_2">2.Severe dysarthria</string>
    <string name="radio_10_un">UN.Intubated or physical barrier</string>
    <string name="radio_11_0">0.No abnormality</string>
    <string name="radio_11_1">1.Visuall, tactile, auditory, spatial or personal inattention or extinction</string>
    <string name="radio_11_2">2.Profound hemi-inattention or extinction to more than one modality</string>
	<string name="radio_modified_rankin_scale_0">0.Cares for self, no symptoms</string>
	<string name="radio_modified_rankin_scale_1">1.Cares for self, some symptoms disability</string>
	<string name="radio_modified_rankin_scale_2">2.Cares for self, but unable to carry out all previous activities</string>
	<string name="radio_modified_rankin_scale_3">3.Requires some help</string>
	<string name="radio_modified_rankin_scale_4">4.Semi-severe disability, needs assistance to own bodily needs and unable to walk unassisted</string>
	<string name="radio_modified_rankin_scale_5">5.Severe disability, requires constant nursing, bedridden</string>
	<string name="radio_modified_rankin_scale_6">6.Dead</string>
	<string name="radio_mrs6_yes">Yes, patient died. I will interrupt the process.</string>
	<string name="radio_mrs6_no">No, patient is alive. I will correct my answer.</string>
	<string name="radio_admission_ct_no_visible_sign">No visible signs of ischemia</string>
	<string name="radio_admission_ct_hyper_sign">(Hyper)Dense cerebral artery sign</string>
	<string name="radio_admission_ct_early_infarct_sign">Early infarct sign (visible signs of ischemia)</string>
	<string name="radio_admission_ct_ischemia_less">Ischemia \u003C 1/3 hemisphere</string>
	<string name="radio_admission_ct_ischemia_more">Ischemia \u003E 1/3 hemisphere</string>
	<string name="radio_admission_ct_bleeding">Cerebral or intracranial bleeding</string>
	<string name="radio_admission_ct_tumor">CNS tumour</string>
	<string name="radio_admission_ct_abscess">CNS abscess</string>
	<string name="radio_admission_ct_other">Other contraindicating finding</string>
	<string name="radio_done_perfusion_ct_1">Perfusion deficiency</string>
	<string name="radio_done_perfusion_ct_2">Signs of perfusion deficiency</string>
	<string name="radio_done_perfusion_ct_3">No perfusion deficiency</string>
	<string name="radio_done_ct_angiography_1">Basilar thrombosis</string>
	<string name="radio_done_ct_angiography_2">Signs of basilar thrombosis</string>
	<string name="radio_done_ct_angiography_3">Suspicion of thrombosis</string>
	<string name="radio_done_ct_angiography_4">No signs of thrombosis</string>
	<string name="radio_yes_relative">Yes, relative</string>
	<string name="radio_hellp">HELLP</string>
	<string name="radio_anticoagulant_treatment_heparin">Heparin or LMWH (low-molecular-weight heparin)</string>
	<string name="radio_anticoagulant_treatment_dabigatran">Dabigatran (Pradaxa®)</string>
	<string name="radio_anticoagulant_treatment_apiksaban">Apiksaban (Eliquis®) or rivaroksaban (Xarelto®)</string>
	<string name="radio_other">Other</string>
	<string name="radio_cardiovascular_infections_endocarditis">Suspicion of endocarditis</string>
	<string name="radio_cardiovascular_infections_pericarditis">Suspicion of pericarditis</string>
	<string name="radio_other_critical">Other contraindication</string>
	<string name="radio_other_not_critical">Other, not critical</string>
	<string name="radio_operation_1">Major surgical operation within 14 days (AHA) or 1 month (HUCH)</string>
	<string name="radio_operation_2">Neurosurgical operation within 14 days (AHA) or 1 month (HUCH)</string>
	<string name="radio_operation_3">Opthalmological operation  within 14 days (AHA) or 1 month (HUCH)</string>
	<string name="radio_operation_4">Punction of a great vessel without the possibility to use  tourniquet within 10 days</string>
	<string name="radio_operation_5">Traumatic external cardiac massage within 10 days</string>
	<string name="radio_operation_6">Parturition within 10 days</string>
	<string name="radio_other_what">Other, what?</string>
    <string name="imgbtn_done">Done</string>
	<string name="imgbtn_save">Save</string>
	<string name="imgbtn_help_operation">Elevating operation</string>
	<string name="info_anamnesis_operation">History of bleeding-risk elevating operation (in 10-30 days)</string>
	<string name="question_specify_operation">Which bleeding risk elevating operation has patient had within 10-30 days? (Choose item(s) from the list below)</string>
	<string name="info_contrain_relative_1">Initial convulsions</string>
	<string name="info_contrain_relative_2">Quickly recovering stroke symptoms</string>
	<string name="info_contrain_relative_3">Symptoms suggesting SAV</string>
	<string name="info_contrain_relative_4">Mild stroke symptoms</string>
	<string name="info_contrain_relative_5">NIHSS \u003C 3</string>
	<string name="info_contrain_relative_6">NIHSS \u003E 25 (over 3 hours from the onset of symptoms)</string>
	<string name="info_contrain_relative_7">Patient is not able to take care for self </string>
	<string name="info_contrain_relative_8">Requires some help</string>
	<string name="info_contrain_relative_9">Semi-severe disability, needs assistance to own bodily needs and unable to walk unassisted</string>
	<string name="info_contrain_relative_10">No perfusion deficiency</string>
	<string name="info_contrain_relative_11">No signs of thrombosis</string>
	<string name="info_contrain_relative_12">Quick INR is (1,5-1,7)</string>
	<string name="info_contrain_relative_13">Hyperglycemia. Remember to treat hyperglycemia too</string>
	<string name="info_contrain_relative_14">Patient uses heparin or LMWH</string>
	<string name="info_contrain_relative_15">Patient uses dabigatran</string>
	<string name="info_contrain_relative_16">Patenet uses apiksaban or rivaroksaban</string>
	<string name="info_contrain_relative_17">Use of other anticoagulant than heparin, LMWH, dabigatran (Pradaxa®)  apiksaban (Eliquis®)  or rivaroksaban (Xarelto®)</string>
	<string name="info_contrain_relative_18">First trimester of pregnancy</string>
	<string name="info_contrain_relative_19">Placenta previa</string>
	<string name="info_contrain_relative_20">Other, relatively critical obstetrical condition</string>
	<string name="info_contrain_relative_21">Urinary tract hemorrhage</string>
	<string name="info_contrain_relative_22">Acute myocardial infarction within 3 months</string>
	<string name="info_control_ct">Control CT at 24 hours: </string>
</resources>