<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://www.gueei.com/android-binding/"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <TextView android:id="@+id/info_contrain_relative_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_1"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_2"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_3"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_4"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_5"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_6"
        android:background="@android:color/holo_orange_light" >
    </TextView>
<TextView android:id="@+id/info_contrain_relative_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_7"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_8"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_9"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_10"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_11"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_12"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_13"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_14"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_15"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_16"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_17"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_18"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_19"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_20"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_21"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    <TextView android:id="@+id/info_contrain_relative_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_contrain_relative_22"
        android:background="@android:color/holo_orange_light" >
    </TextView>
    </LinearLayout>
</ScrollView>